c/soloud_c.h


typedef void * Soloud;

typedef void * AudioCollider;

typedef void * AudioAttenuator;

typedef void * AudioSource;

typedef void * Filter;

typedef void * Monotone;

typedef void * Noise;

typedef void * Openmpt;

typedef void * Queue;

typedef void * RobotizeFilter;

typedef void * Sfxr;

typedef void * File;


/*
 * Monotone
 */
void Monotone_destroy(Monotone * aMonotone);

Monotone * Monotone_create();

int Monotone_setParams(Monotone * aMonotone, int aHardwareChannels);

int Monotone_setParamsEx(Monotone * aMonotone, int aHardwareChannels, int aWaveform /* = Soloud::WAVE_SQUARE */);

int Monotone_load(Monotone * aMonotone, const char * aFilename);

int Monotone_loadMem(Monotone * aMonotone, const unsigned char * aMem, unsigned int aLength);

int Monotone_loadMemEx(Monotone * aMonotone, const unsigned char * aMem, unsigned int aLength, int aCopy /* = false */, int aTakeOwnership /* = true */);

int Monotone_loadFile(Monotone * aMonotone, File * aFile);

void Monotone_setVolume(Monotone * aMonotone, float aVolume);

void Monotone_setLooping(Monotone * aMonotone, int aLoop);

void Monotone_setAutoStop(Monotone * aMonotone, int aAutoStop);

void Monotone_set3dMinMaxDistance(Monotone * aMonotone, float aMinDistance, float aMaxDistance);

void Monotone_set3dAttenuation(Monotone * aMonotone, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void Monotone_set3dDopplerFactor(Monotone * aMonotone, float aDopplerFactor);

void Monotone_set3dListenerRelative(Monotone * aMonotone, int aListenerRelative);

void Monotone_set3dDistanceDelay(Monotone * aMonotone, int aDistanceDelay);

void Monotone_set3dCollider(Monotone * aMonotone, AudioCollider * aCollider);

void Monotone_set3dColliderEx(Monotone * aMonotone, AudioCollider * aCollider, int aUserData /* = 0 */);

void Monotone_set3dAttenuator(Monotone * aMonotone, AudioAttenuator * aAttenuator);

void Monotone_setInaudibleBehavior(Monotone * aMonotone, int aMustTick, int aKill);

void Monotone_setLoopPoint(Monotone * aMonotone, double aLoopPoint);

double Monotone_getLoopPoint(Monotone * aMonotone);

void Monotone_setFilter(Monotone * aMonotone, unsigned int aFilterId, Filter * aFilter);

void Monotone_stop(Monotone * aMonotone);


/*
 * Noise
 */
void Noise_destroy(Noise * aNoise);

Noise * Noise_create();

void Noise_setOctaveScale(Noise * aNoise, float aOct0, float aOct1, float aOct2, float aOct3, float aOct4, float aOct5, float aOct6, float aOct7, float aOct8, float aOct9);

void Noise_setType(Noise * aNoise, int aType);

void Noise_setVolume(Noise * aNoise, float aVolume);

void Noise_setLooping(Noise * aNoise, int aLoop);

void Noise_setAutoStop(Noise * aNoise, int aAutoStop);

void Noise_set3dMinMaxDistance(Noise * aNoise, float aMinDistance, float aMaxDistance);

void Noise_set3dAttenuation(Noise * aNoise, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void Noise_set3dDopplerFactor(Noise * aNoise, float aDopplerFactor);

void Noise_set3dListenerRelative(Noise * aNoise, int aListenerRelative);

void Noise_set3dDistanceDelay(Noise * aNoise, int aDistanceDelay);

void Noise_set3dCollider(Noise * aNoise, AudioCollider * aCollider);

void Noise_set3dColliderEx(Noise * aNoise, AudioCollider * aCollider, int aUserData /* = 0 */);

void Noise_set3dAttenuator(Noise * aNoise, AudioAttenuator * aAttenuator);

void Noise_setInaudibleBehavior(Noise * aNoise, int aMustTick, int aKill);

void Noise_setLoopPoint(Noise * aNoise, double aLoopPoint);

double Noise_getLoopPoint(Noise * aNoise);

void Noise_setFilter(Noise * aNoise, unsigned int aFilterId, Filter * aFilter);

void Noise_stop(Noise * aNoise);


/*
 * Openmpt
 */
void Openmpt_destroy(Openmpt * aOpenmpt);

Openmpt * Openmpt_create();

int Openmpt_load(Openmpt * aOpenmpt, const char * aFilename);

int Openmpt_loadMem(Openmpt * aOpenmpt, const unsigned char * aMem, unsigned int aLength);

int Openmpt_loadMemEx(Openmpt * aOpenmpt, const unsigned char * aMem, unsigned int aLength, int aCopy /* = false */, int aTakeOwnership /* = true */);

int Openmpt_loadFile(Openmpt * aOpenmpt, File * aFile);

void Openmpt_setVolume(Openmpt * aOpenmpt, float aVolume);

void Openmpt_setLooping(Openmpt * aOpenmpt, int aLoop);

void Openmpt_setAutoStop(Openmpt * aOpenmpt, int aAutoStop);

void Openmpt_set3dMinMaxDistance(Openmpt * aOpenmpt, float aMinDistance, float aMaxDistance);

void Openmpt_set3dAttenuation(Openmpt * aOpenmpt, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void Openmpt_set3dDopplerFactor(Openmpt * aOpenmpt, float aDopplerFactor);

void Openmpt_set3dListenerRelative(Openmpt * aOpenmpt, int aListenerRelative);

void Openmpt_set3dDistanceDelay(Openmpt * aOpenmpt, int aDistanceDelay);

void Openmpt_set3dCollider(Openmpt * aOpenmpt, AudioCollider * aCollider);

void Openmpt_set3dColliderEx(Openmpt * aOpenmpt, AudioCollider * aCollider, int aUserData /* = 0 */);

void Openmpt_set3dAttenuator(Openmpt * aOpenmpt, AudioAttenuator * aAttenuator);

void Openmpt_setInaudibleBehavior(Openmpt * aOpenmpt, int aMustTick, int aKill);

void Openmpt_setLoopPoint(Openmpt * aOpenmpt, double aLoopPoint);

double Openmpt_getLoopPoint(Openmpt * aOpenmpt);

void Openmpt_setFilter(Openmpt * aOpenmpt, unsigned int aFilterId, Filter * aFilter);

void Openmpt_stop(Openmpt * aOpenmpt);


/*
 * Queue
 */
void Queue_destroy(Queue * aQueue);

Queue * Queue_create();

int Queue_play(Queue * aQueue, AudioSource * aSound);

unsigned int Queue_getQueueCount(Queue * aQueue);

int Queue_isCurrentlyPlaying(Queue * aQueue, AudioSource * aSound);

int Queue_setParamsFromAudioSource(Queue * aQueue, AudioSource * aSound);

int Queue_setParams(Queue * aQueue, float aSamplerate);

int Queue_setParamsEx(Queue * aQueue, float aSamplerate, unsigned int aChannels /* = 2 */);

void Queue_setVolume(Queue * aQueue, float aVolume);

void Queue_setLooping(Queue * aQueue, int aLoop);

void Queue_setAutoStop(Queue * aQueue, int aAutoStop);

void Queue_set3dMinMaxDistance(Queue * aQueue, float aMinDistance, float aMaxDistance);

void Queue_set3dAttenuation(Queue * aQueue, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void Queue_set3dDopplerFactor(Queue * aQueue, float aDopplerFactor);

void Queue_set3dListenerRelative(Queue * aQueue, int aListenerRelative);

void Queue_set3dDistanceDelay(Queue * aQueue, int aDistanceDelay);

void Queue_set3dCollider(Queue * aQueue, AudioCollider * aCollider);

void Queue_set3dColliderEx(Queue * aQueue, AudioCollider * aCollider, int aUserData /* = 0 */);

void Queue_set3dAttenuator(Queue * aQueue, AudioAttenuator * aAttenuator);

void Queue_setInaudibleBehavior(Queue * aQueue, int aMustTick, int aKill);

void Queue_setLoopPoint(Queue * aQueue, double aLoopPoint);

double Queue_getLoopPoint(Queue * aQueue);

void Queue_setFilter(Queue * aQueue, unsigned int aFilterId, Filter * aFilter);

void Queue_stop(Queue * aQueue);


/*
 * RobotizeFilter
 */
void RobotizeFilter_destroy(RobotizeFilter * aRobotizeFilter);

int RobotizeFilter_getParamCount(RobotizeFilter * aRobotizeFilter);

const char * RobotizeFilter_getParamName(RobotizeFilter * aRobotizeFilter, unsigned int aParamIndex);

unsigned int RobotizeFilter_getParamType(RobotizeFilter * aRobotizeFilter, unsigned int aParamIndex);

float RobotizeFilter_getParamMax(RobotizeFilter * aRobotizeFilter, unsigned int aParamIndex);

float RobotizeFilter_getParamMin(RobotizeFilter * aRobotizeFilter, unsigned int aParamIndex);

void RobotizeFilter_setParams(RobotizeFilter * aRobotizeFilter, float aFreq, int aWaveform);

RobotizeFilter * RobotizeFilter_create();


/*
 * Sfxr
 */
void Sfxr_destroy(Sfxr * aSfxr);

Sfxr * Sfxr_create();

void Sfxr_resetParams(Sfxr * aSfxr);

int Sfxr_loadParams(Sfxr * aSfxr, const char * aFilename);

int Sfxr_loadParamsMem(Sfxr * aSfxr, unsigned char * aMem, unsigned int aLength);

int Sfxr_loadParamsMemEx(Sfxr * aSfxr, unsigned char * aMem, unsigned int aLength, int aCopy /* = false */, int aTakeOwnership /* = true */);

int Sfxr_loadParamsFile(Sfxr * aSfxr, File * aFile);

int Sfxr_loadPreset(Sfxr * aSfxr, int aPresetNo, int aRandSeed);

void Sfxr_setVolume(Sfxr * aSfxr, float aVolume);

void Sfxr_setLooping(Sfxr * aSfxr, int aLoop);

void Sfxr_setAutoStop(Sfxr * aSfxr, int aAutoStop);

void Sfxr_set3dMinMaxDistance(Sfxr * aSfxr, float aMinDistance, float aMaxDistance);

void Sfxr_set3dAttenuation(Sfxr * aSfxr, unsigned int aAttenuationModel, float aAttenuationRolloffFactor);

void Sfxr_set3dDopplerFactor(Sfxr * aSfxr, float aDopplerFactor);

void Sfxr_set3dListenerRelative(Sfxr * aSfxr, int aListenerRelative);

void Sfxr_set3dDistanceDelay(Sfxr * aSfxr, int aDistanceDelay);

void Sfxr_set3dCollider(Sfxr * aSfxr, AudioCollider * aCollider);

void Sfxr_set3dColliderEx(Sfxr * aSfxr, AudioCollider * aCollider, int aUserData /* = 0 */);

void Sfxr_set3dAttenuator(Sfxr * aSfxr, AudioAttenuator * aAttenuator);

void Sfxr_setInaudibleBehavior(Sfxr * aSfxr, int aMustTick, int aKill);

void Sfxr_setLoopPoint(Sfxr * aSfxr, double aLoopPoint);

double Sfxr_getLoopPoint(Sfxr * aSfxr);

void Sfxr_setFilter(Sfxr * aSfxr, unsigned int aFilterId, Filter * aFilter);

void Sfxr_stop(Sfxr * aSfxr);