soloud.odin


	//
	// TODO: READY FOR MONOTONE
	//
	/*
 * Monotone
 */
	// Monotone_destroy :: proc(aMonotone: ^Monotone) ---
	//  Monotone_create :: proc() ->^Monotone---
	// Monotone_setParams :: proc(aMonotone: ^Monotone, aHardwareChannels: b32) ->i32 ---
	// Monotone_setParamsEx :: proc(aMonotone: ^Monotone, aHardwareChannels: b32, aWaveform: b32 /* = Soloud::WAVE_SQUARE */) ->i32 ---
	// Monotone_load :: proc(aMonotone: ^Monotone, const char * aFilename) ->i32 ---
	// Monotone_loadMem :: proc(aMonotone: ^Monotone, const unsigned char * aMem, unsigned int aLength) ->i32 ---
	// Monotone_loadMemEx :: proc(aMonotone: ^Monotone, const unsigned char * aMem, unsigned int aLength, int aCopy /* = false */, int aTakeOwnership /* = true */) ->i32 ---
	// Monotone_loadFile :: proc(aMonotone: ^Monotone, File * aFile) ->i32 ---
	// Monotone_setVolume :: proc(aMonotone: ^Monotone, aVolume: f32) ---
	// Monotone_setLooping :: proc(aMonotone: ^Monotone, aLoop: b32) ---
	// Monotone_setAutoStop :: proc(aMonotone: ^Monotone, aAutoStop: b32) ---
	// Monotone_set3dMinMaxDistance :: proc(aMonotone: ^Monotone, aMinDistance: f32, aMaxDistance: f32) ---
	// Monotone_set3dAttenuation :: proc(aMonotone: ^Monotone, unsigned int aAttenuationModel, aAttenuationRolloffFactor: f32) ---
	// Monotone_set3dDopplerFactor :: proc(aMonotone: ^Monotone, aDopplerFactor: f32) ---
	// Monotone_set3dListenerRelative :: proc(aMonotone: ^Monotone, int aListenerRelative) ---
	// Monotone_set3dDistanceDelay :: proc(aMonotone: ^Monotone, int aDistanceDelay) ---
	// Monotone_set3dCollider :: proc(aMonotone: ^Monotone, aCollider: ^AudioCollider) ---
	// Monotone_set3dColliderEx :: proc(aMonotone: ^Monotone, aCollider: ^AudioCollider, int aUserData /* = 0 */) ---
	// Monotone_set3dAttenuator :: proc(aMonotone: ^Monotone, aAttenuator: ^AudioAttenuator) ---
	// Monotone_setInaudibleBehavior :: proc(aMonotone: ^Monotone, aMustTick: b32, aKill: b32) ---
	// Monotone_setLoopPoint :: proc(aMonotone: ^Monotone, double aLoopPoint) ---
	//  Monotone_getLoopPoint :: proc(aMonotone: ^Monotone) ->f64---
	// Monotone_setFilter :: proc(aMonotone: ^Monotone, unsigned int aFilterId, aFilter: ^Filter) ---
	// Monotone_stop :: proc(aMonotone: ^Monotone) ---

	// /*
	//  * Noise
	//  */
	// Noise_destroy :: proc(aNoise: ^Noise) ---
	// Noise * Noise_create :: proc() ---
	// Noise_setOctaveScale :: proc(aNoise: ^Noise, float aOct0, float aOct1, float aOct2, float aOct3, float aOct4, float aOct5, float aOct6, float aOct7, float aOct8, float aOct9) ---
	// Noise_setType :: proc(aNoise: ^Noise, int aType) ---
	// Noise_setVolume :: proc(aNoise: ^Noise, aVolume: f32) ---
	// Noise_setLooping :: proc(aNoise: ^Noise, aLoop: b32) ---
	// Noise_setAutoStop :: proc(aNoise: ^Noise, aAutoStop: b32) ---
	// Noise_set3dMinMaxDistance :: proc(aNoise: ^Noise, aMinDistance: f32, aMaxDistance: f32) ---
	// Noise_set3dAttenuation :: proc(aNoise: ^Noise, unsigned int aAttenuationModel, aAttenuationRolloffFactor: f32) ---
	// Noise_set3dDopplerFactor :: proc(aNoise: ^Noise, aDopplerFactor: f32) ---
	// Noise_set3dListenerRelative :: proc(aNoise: ^Noise, int aListenerRelative) ---
	// Noise_set3dDistanceDelay :: proc(aNoise: ^Noise, int aDistanceDelay) ---
	// Noise_set3dCollider :: proc(aNoise: ^Noise, aCollider: ^AudioCollider) ---
	// Noise_set3dColliderEx :: proc(aNoise: ^Noise, aCollider: ^AudioCollider, int aUserData /* = 0 */) ---
	// Noise_set3dAttenuator :: proc(aNoise: ^Noise, aAttenuator: ^AudioAttenuator) ---
	// Noise_setInaudibleBehavior :: proc(aNoise: ^Noise, aMustTick: b32, aKill: b32) ---
	// Noise_setLoopPoint :: proc(aNoise: ^Noise, double aLoopPoint) ---
	// double Noise_getLoopPoint :: proc(aNoise: ^Noise) ---
	// Noise_setFilter :: proc(aNoise: ^Noise, unsigned int aFilterId, aFilter: ^Filter) ---
	// Noise_stop :: proc(aNoise: ^Noise) ---

	// /*
	//  * Openmpt
	//  */
	// Openmpt_destroy :: proc(aOpenmpt: ^Openmpt) ---
	// Openmpt * Openmpt_create :: proc() ---
	// int Openmpt_load :: proc(aOpenmpt: ^Openmpt, const char * aFilename) ---
	// int Openmpt_loadMem :: proc(aOpenmpt: ^Openmpt, const unsigned char * aMem, unsigned int aLength) ---
	// int Openmpt_loadMemEx :: proc(aOpenmpt: ^Openmpt, const unsigned char * aMem, unsigned int aLength, int aCopy /* = false */, int aTakeOwnership /* = true */) ---
	// int Openmpt_loadFile :: proc(aOpenmpt: ^Openmpt, File * aFile) ---
	// Openmpt_setVolume :: proc(aOpenmpt: ^Openmpt, aVolume: f32) ---
	// Openmpt_setLooping :: proc(aOpenmpt: ^Openmpt, aLoop: b32) ---
	// Openmpt_setAutoStop :: proc(aOpenmpt: ^Openmpt, aAutoStop: b32) ---
	// Openmpt_set3dMinMaxDistance :: proc(aOpenmpt: ^Openmpt, aMinDistance: f32, aMaxDistance: f32) ---
	// Openmpt_set3dAttenuation :: proc(aOpenmpt: ^Openmpt, unsigned int aAttenuationModel, aAttenuationRolloffFactor: f32) ---
	// Openmpt_set3dDopplerFactor :: proc(aOpenmpt: ^Openmpt, aDopplerFactor: f32) ---
	// Openmpt_set3dListenerRelative :: proc(aOpenmpt: ^Openmpt, int aListenerRelative) ---
	// Openmpt_set3dDistanceDelay :: proc(aOpenmpt: ^Openmpt, int aDistanceDelay) ---
	// Openmpt_set3dCollider :: proc(aOpenmpt: ^Openmpt, aCollider: ^AudioCollider) ---
	// Openmpt_set3dColliderEx :: proc(aOpenmpt: ^Openmpt, aCollider: ^AudioCollider, int aUserData /* = 0 */) ---
	// Openmpt_set3dAttenuator :: proc(aOpenmpt: ^Openmpt, aAttenuator: ^AudioAttenuator) ---
	// Openmpt_setInaudibleBehavior :: proc(aOpenmpt: ^Openmpt, aMustTick: b32, aKill: b32) ---
	// Openmpt_setLoopPoint :: proc(aOpenmpt: ^Openmpt, double aLoopPoint) ---
	// double Openmpt_getLoopPoint :: proc(aOpenmpt: ^Openmpt) ---
	// Openmpt_setFilter :: proc(aOpenmpt: ^Openmpt, unsigned int aFilterId, aFilter: ^Filter) ---
	// Openmpt_stop :: proc(aOpenmpt: ^Openmpt) ---

	// /*
	//  * Queue
	//  */
	// Queue_destroy :: proc(aQueue: ^Queue) ---
	// Queue * Queue_create :: proc() ---
	// int Queue_play :: proc(aQueue: ^Queue, AudioSource * aSound) ---
	// unsigned int Queue_getQueueCount :: proc(aQueue: ^Queue) ---
	// int Queue_isCurrentlyPlaying :: proc(aQueue: ^Queue, AudioSource * aSound) ---
	// int Queue_setParamsFromAudioSource :: proc(aQueue: ^Queue, AudioSource * aSound) ---
	// int Queue_setParams :: proc(aQueue: ^Queue, aSamplerate: f32) ---
	// int Queue_setParamsEx :: proc(aQueue: ^Queue, aSamplerate: f32, unsigned int aChannels /* = 2 */) ---
	// Queue_setVolume :: proc(aQueue: ^Queue, aVolume: f32) ---
	// Queue_setLooping :: proc(aQueue: ^Queue, aLoop: b32) ---
	// Queue_setAutoStop :: proc(aQueue: ^Queue, aAutoStop: b32) ---
	// Queue_set3dMinMaxDistance :: proc(aQueue: ^Queue, aMinDistance: f32, aMaxDistance: f32) ---
	// Queue_set3dAttenuation :: proc(aQueue: ^Queue, unsigned int aAttenuationModel, aAttenuationRolloffFactor: f32) ---
	// Queue_set3dDopplerFactor :: proc(aQueue: ^Queue, aDopplerFactor: f32) ---
	// Queue_set3dListenerRelative :: proc(aQueue: ^Queue, int aListenerRelative) ---
	// Queue_set3dDistanceDelay :: proc(aQueue: ^Queue, int aDistanceDelay) ---
	// Queue_set3dCollider :: proc(aQueue: ^Queue, aCollider: ^AudioCollider) ---
	// Queue_set3dColliderEx :: proc(aQueue: ^Queue, aCollider: ^AudioCollider, int aUserData /* = 0 */) ---
	// Queue_set3dAttenuator :: proc(aQueue: ^Queue, aAttenuator: ^AudioAttenuator) ---
	// Queue_setInaudibleBehavior :: proc(aQueue: ^Queue, aMustTick: b32, aKill: b32) ---
	// Queue_setLoopPoint :: proc(aQueue: ^Queue, double aLoopPoint) ---
	// double Queue_getLoopPoint :: proc(aQueue: ^Queue) ---
	// Queue_setFilter :: proc(aQueue: ^Queue, unsigned int aFilterId, aFilter: ^Filter) ---
	// Queue_stop :: proc(aQueue: ^Queue) ---

	// /*
	//  * RobotizeFilter
	//  */
	// RobotizeFilter_destroy :: proc(RobotizeFilter * aRobotizeFilter) ---
	// int RobotizeFilter_getParamCount :: proc(RobotizeFilter * aRobotizeFilter) ---
	// const char * RobotizeFilter_getParamName :: proc(RobotizeFilter * aRobotizeFilter, unsigned int aParamIndex) ---
	// unsigned int RobotizeFilter_getParamType :: proc(RobotizeFilter * aRobotizeFilter, unsigned int aParamIndex) ---
	// float RobotizeFilter_getParamMax :: proc(RobotizeFilter * aRobotizeFilter, unsigned int aParamIndex) ---
	// float RobotizeFilter_getParamMin :: proc(RobotizeFilter * aRobotizeFilter, unsigned int aParamIndex) ---
	// RobotizeFilter_setParams :: proc(RobotizeFilter * aRobotizeFilter, float aFreq, aWaveform: b32) ---
	// RobotizeFilter * RobotizeFilter_create :: proc() ---

	// /*
	//  * Sfxr
	//  */
	// Sfxr_destroy :: proc(Sfxr * aSfxr) ---
	// Sfxr * Sfxr_create :: proc() ---
	// Sfxr_resetParams :: proc(Sfxr * aSfxr) ---
	// int Sfxr_loadParams :: proc(Sfxr * aSfxr, const char * aFilename) ---
	// int Sfxr_loadParamsMem :: proc(Sfxr * aSfxr, unsigned char * aMem, unsigned int aLength) ---
	// int Sfxr_loadParamsMemEx :: proc(Sfxr * aSfxr, unsigned char * aMem, unsigned int aLength, int aCopy /* = false */, int aTakeOwnership /* = true */) ---
	// int Sfxr_loadParamsFile :: proc(Sfxr * aSfxr, File * aFile) ---
	// int Sfxr_loadPreset :: proc(Sfxr * aSfxr, int aPresetNo, int aRandSeed) ---
	// Sfxr_setVolume :: proc(Sfxr * aSfxr, aVolume: f32) ---
	// Sfxr_setLooping :: proc(Sfxr * aSfxr, aLoop: b32) ---
	// Sfxr_setAutoStop :: proc(Sfxr * aSfxr, aAutoStop: b32) ---
	// Sfxr_set3dMinMaxDistance :: proc(Sfxr * aSfxr, aMinDistance: f32, aMaxDistance: f32) ---
	// Sfxr_set3dAttenuation :: proc(Sfxr * aSfxr, unsigned int aAttenuationModel, aAttenuationRolloffFactor: f32) ---
	// Sfxr_set3dDopplerFactor :: proc(Sfxr * aSfxr, aDopplerFactor: f32) ---
	// Sfxr_set3dListenerRelative :: proc(Sfxr * aSfxr, int aListenerRelative) ---
	// Sfxr_set3dDistanceDelay :: proc(Sfxr * aSfxr, int aDistanceDelay) ---
	// Sfxr_set3dCollider :: proc(Sfxr * aSfxr, aCollider: ^AudioCollider) ---
	// Sfxr_set3dColliderEx :: proc(Sfxr * aSfxr, aCollider: ^AudioCollider, int aUserData /* = 0 */) ---
	// Sfxr_set3dAttenuator :: proc(Sfxr * aSfxr, aAttenuator: ^AudioAttenuator) ---
	// Sfxr_setInaudibleBehavior :: proc(Sfxr * aSfxr, aMustTick: b32, aKill: b32) ---
	// Sfxr_setLoopPoint :: proc(Sfxr * aSfxr, double aLoopPoint) ---
	// double Sfxr_getLoopPoint :: proc(Sfxr * aSfxr) ---
	// Sfxr_setFilter :: proc(Sfxr * aSfxr, unsigned int aFilterId, aFilter: ^Filter) ---
	// Sfxr_stop :: proc(Sfxr * aSfxr) ---
